# outpost-remake

./: .gitignore  Cargo.toml  README.md  function_flow_diagram.drawio  function_flow_diagram_2.drawio  function_relations.puml  meson.build  outpost_ghidra_dump_2022may22_1328.c  outpost_ghidra_dump_2022may22_1328.h
dos_c_src/: .clang-format  .gitignore  CMakeLists.txt  OUTPOST.EXE.c  code_graph.d2  doc.md
dos_c_src/blocks/: block_1.c  block_11.c  block_2.c  block_4.c  block_5.c  block_6.c  block_7.c  block_8.c  block_9.c
dos_c_src/src/: OUTPOST.EXE.h  bad_1.c  cleanup_ops.c  draw_ops.c  fn_ptr_defs.h  fn_ptr_ops.c  globals.h  init_globals.c  init_globals.h  main.c  main.h  op_dos_interrupts.h  op_int.h  op_win_def.h  op_winapi.c  op_winapi.h  op_windef.h  outpost_int.h  string_consts.h  string_ops.c  string_ops.h  struct_ops.c  structs_1.h  sys_ops.c  sys_types.h  types.h  ui_ops.c  unk_1.c  unk_2.c  utils.c  utils.h  win_api_defs.h  win_ops.c  win_types.h  winapi.c  winapi.h  windows_platform.h  windows_shim.c  windows_shim.h
dos_c_src/src/address_tables/: address_table_1.h  address_tables_2.h  data_tables.h  function_tables.h
dos_c_src/src/bad_funcs/: bad_1.c  bad_1.h
dos_c_src/src/big_funcs/: big_fn_1.c  big_fn_1.h
dos_c_src/src/blocks/: block_10.c  block_100.c  block_101.c  block_102.c  block_103.c  block_104.c  block_105.c  block_106.c  block_107.c  block_108.c  block_109.c  block_110.c  block_111.c  block_112.c  block_113.c  block_12.c  block_13.c  block_14.c  block_15.c  block_16.c  block_17.c  block_18.c  block_19.c  block_2.c  block_20.c  block_21.c  block_22.c  block_23.c  block_24.c  block_25.c  block_26  block_27.c  block_28.c  block_29.c  block_3.c  block_30.c  block_31.c  block_32.c  block_33.c  block_34.c  (+69 more)
dos_c_src/src/cleanup/: cleanup_ops.c  cleanup_ops.h
dos_c_src/src/draw_ops/: draw_ops_1.c  draw_ops_1.h  draw_ops_2.c  draw_ops_2.h  draw_ops_3.c  draw_ops_3.h  draw_ops_4.c  draw_ops_4.h
dos_c_src/src/file_ops/: file_ops_1.c  file_ops_1.h  file_ops_2.c  file_ops_2.h  file_ops_3.c  file_ops_3.h  file_ops_4.c  file_ops_4.h
dos_c_src/src/fn_ptr_ops/: fn_ptr_ops_1.c  fn_ptr_ops_1.h  fn_ptr_ops_2.c  fn_ptr_ops_2.h  fn_ptr_ops_3.c  fn_ptr_ops_3.h  fn_ptr_ops_4.c  fn_ptr_ops_4.h  fn_ptr_ops_5.c  fn_ptr_ops_5.h  fn_ptr_ops_6.c  fn_ptr_ops_6.h  fn_ptr_ops_7.c  fn_ptr_ops_7.h
dos_c_src/src/media/: media_1.c  media_1.h
dos_c_src/src/struct_ops/: struct_ops_1.c  struct_ops_1.h  struct_ops_2.c  struct_ops_2.h  struct_ops_3.c  struct_ops_3.h  struct_ops_4.c  struct_ops_4.h  struct_ops_5.c  struct_ops_5.h  struct_ops_6.c  struct_ops_6.h
dos_c_src/src/structs/: addr_struct.h  seg_address.h  struct318.h  struct323.h  struct371.h  struct384.h  struct397.h  struct_12.h  struct_163.h  struct_18.h  struct_21.h  struct_283.h  struct_296.h  struct_306.h  struct_310.h  struct_323.h  struct_384.h  struct_397.h  struct_413.h  struct_439.h  struct_492.h  struct_625.h  struct_626.h  struct_628.h  struct_629.h  struct_650.h  struct_655.h  struct_656.h  struct_660.h  struct_665.h  struct_666.h  struct_669.h  struct_679.h  struct_692.h  struct_693.h  struct_696.h  struct_697.h  struct_76.h  structs_1.h  structs_10.h  (+110 more)
dos_c_src/src/sys_ops/: sys_ops_1.c  sys_ops_1.h  sys_ops_10.c  sys_ops_10.h  sys_ops_11.c  sys_ops_11.h  sys_ops_12.c  sys_ops_12.h  sys_ops_2.c  sys_ops_2.h  sys_ops_3.c  sys_ops_3.h  sys_ops_4.c  sys_ops_4.h  sys_ops_5.c  sys_ops_5.h  sys_ops_6.c  sys_ops_6.h  sys_ops_7.c  sys_ops_7.h  sys_ops_8.c  sys_ops_8.h  sys_ops_9.c  sys_ops_9.h
dos_c_src/src/ui_ops/: ui_ops_1.c  ui_ops_1.h  ui_ops_2.c  ui_ops_2.h  ui_ops_3.c  ui_ops_3.h  ui_ops_4.c  ui_ops_4.h  ui_ops_5.c  ui_ops_5.h  ui_ops_6.c  ui_ops_6.h  ui_ops_7.c  ui_ops_7.h
dos_c_src/src/unk/: unk_1.c  unk_1.h  unk_10.c  unk_10.h  unk_11.c  unk_11.h  unk_12.c  unk_12.h  unk_13.c  unk_13.h  unk_14.c  unk_14.h  unk_15.c  unk_15.h  unk_16.c  unk_16.h  unk_17.c  unk_17.h  unk_18.c  unk_18.h  unk_19.c  unk_19.h  unk_2.c  unk_2.h  unk_3.c  unk_3.h  unk_4.c  unk_4.h  unk_5.c  unk_5.h  unk_6.c  unk_6.h  unk_7.c  unk_7.h  unk_8.c  unk_8.h  unk_9.c  unk_9.h
dos_c_src/src/win_ops/: win_msg_ops_1.c  win_msg_ops_1.h  win_ops_1.c  win_ops_1.h  win_ops_2.c  win_ops_2.h  win_ops_3.c  win_ops_3.h  win_ops_4.c  win_ops_4.h  win_ops_5.c  win_ops_5.h
old_src/dos_c_src/: .clang-format  CMakeLists.txt
old_src/dos_c_src/src/: globals.h  string_ops.c  string_ops.h  utils.c  utils.h  win_api_defs.h  winapi.h  windows_shim.h
outpost_c_proj/: 1038.c  1038.h  CMakeLists.txt  block_1000.c  block_1000.h  block_1008.c  block_1008.h  block_1010.c  block_1010.h  block_1018.c  block_1018.h  block_1020.c  block_1020.h  block_1028.c  block_1028.h  block_1030.c  block_1038.c  block_1040.c  block_1040.h  entry.c  entry.h  func_ptrs.c  func_ptrs.h  globals.h  main.c  mci_ops.c  mci_ops.h  ops_1.c  ops_1.h  ops_2.c  ops_2.h  ops_3.c  ops_3.h  ops_4.c  ops_4.h  ops_5.c  ops_5.h  ops_6.c  ops_6.h  ops_7.c  (+13 more)
outpost_rs/: Cargo.toml
outpost_rs/src/: cleanup.rs  cleanup_ops.rs  defs.rs  exit.rs  fn_ptr_defs.rs  global.rs  globals.rs  init_globals.rs  main.rs  mci.rs  string_ops.rs  utils.rs
outpost_rs/src/OPHD/: GraphWalker.rs  Mine.rs  ProductPool.rs  ProductionCost.rs  StructureCatalogue.rs
outpost_rs/src/bad_funcs/: bad_1.rs  mod.rs
outpost_rs/src/big_funcs/: big_fn_1.rs  mod.rs
outpost_rs/src/draw_ops/: draw_1008.rs  draw_1010.rs  draw_1018.rs  draw_1020.rs  draw_1040.rs  draw_ops_1.rs  draw_ops_2.rs  draw_ops_3.rs  draw_ops_4.rs  mod.rs
outpost_rs/src/file_ops/: file_1008.rs  file_1028.rs  file_1038.rs  file_ops_1.rs  file_ops_2.rs  file_ops_3.rs  file_ops_4.rs  mod.rs
outpost_rs/src/fn_ptr_ops/: fn_ptr_1000.rs  fn_ptr_1010.rs  util.rs  (+10 more)
rs_sdl_app/: Cargo.toml
rs_sdl_app/src/: main.rs
(+3482 files in other folders)
