cmake_minimum_required(VERSION 3.0)
project(outpost_1)

set_property(GLOBAL PROPERTY C_STANDARD 14)

file(GLOB SOURCES src/**.c)
file(GLOB HEADERS src/**.h)
file(GLOB src_unk_c src/unk/*.c)
file(GLOB src_unk_h src/unk/*.h)
file(GLOB big_funcs_c src/big_funcs/*.c)
file(GLOB big_funcs_h src/big_funcs/*.h)
file(GLOB draw_ops_c src/draw_ops/*.c)
file(GLOB draw_ops_h src/draw_ops/*.h)
file(GLOB file_ops_c src/file_ops/*.c)
file(GLOB file_ops_h src/file_ops/*.h)
file(GLOB fn_ptr_ops_c src/fn_ptr_ops/*.c)
file(GLOB fn_ptr_ops_h src/fn_ptr_ops/*.h)
file(GLOB struct_ops_c src/struct_ops/*.c)
file(GLOB struct_ops_h src/struct_ops/*.h)
file(GLOB sys_ops_c src/sys_ops/*.c)
file(GLOB sys_ops_h src/sys_ops/*.h)
file(GLOB ui_ops_c src/ui_ops/*.c)
file(GLOB ui_ops_h src/ui_ops/*.h)
file(GLOB win_ops_c src/win_ops/*.c)
file(GLOB win_ops_h src/win_ops/*.h)
file(GLOB structs_h src/structs/*.h)
file(GLOB structs_h0 src/structs/structs_0xx/*.h)
file(GLOB structs_h1 src/structs/structs_1xx/*.h)
file(GLOB structs_h2 src/structs/structs_2xx/*.h)
file(GLOB structs_h3 src/structs/structs_3xx/*.h)
file(GLOB structs_h4 src/structs/structs_4xx/*.h)
file(GLOB structs_h5 src/structs/structs_5xx/*.h)
file(GLOB structs_h6 src/structs/structs_6xx/*.h)
file(GLOB bad_funcs_h src/bad_funcs/*.h)
file(GLOB bad_funcs_c src/bad_funcs/*.c)
file(GLOB cleanup_ops_c src/cleanup/*.c)
file(GLOB cleanup_ops_h src/cleanup/*.h)
file(GLOB media_h src/media/*.h)
file(GLOB media_c src/media/*.c)

include_directories(./src)

add_executable(efs_cpp ${SOURCES} ${HEADERS} ${src_unk_c} ${src_unk_h} ${big_funcs_c} ${big_funcs_h} ${draw_ops_c} ${draw_ops_h} ${file_ops_c} ${file_ops_h} ${fn_ptr_ops_c} ${fn_ptr_ops_h} ${struct_ops_c} ${struct_ops_h} ${sys_ops_c} ${sys_ops_h} ${ui_ops_c} ${ui_ops_h} ${win_ops_c} ${win_ops_h} ${structs_h} ${bad_funcs_h} ${bad_funcs_c} ${cleanup_ops_c} ${cleanup_ops_h} ${structs_h0} ${structs_h1} ${structs_h2} ${structs_h3} ${structs_h4} ${structs_h5} ${structs_h6} ${media_h} ${media_c} src/op_dos_interrupts.h)
